--- a/.github/workflows/build-artifact.yaml
+++ b/.github/workflows/build-artifact.yaml
@@ -54,13 +54,15 @@ on:
       #ci-test-docker-image:
       #  description: "Docker tag for the CI Test Docker image for testing TT-Metalium et al"
       #  value: ${{ jobs.build-docker-image.outputs.ci-test-tag }}
+      packages-artifact-name:
+        description: "Name to give download-artifact to get the packages"
+        value: ${{ jobs.build-artifact.outputs.packages-artifact-name }}
       build-artifact-name:
         description: "Name of the published build artifact"
         value: ${{ jobs.build-artifact.outputs.build_artifact_name }}
       wheel-artifact-name:
         description: "Name of the published wheel artifact"
         value: ${{ jobs.build-artifact.outputs.wheel_artifact_name }}
-
 
   workflow_dispatch:
     inputs:
@@ -114,6 +116,7 @@ jobs:
       - build
       - in-service
     outputs:
+      packages-artifact-name: ${{ steps.set-artifact-name.outputs.name }}
       build_artifact_name: ${{ steps.set_build_artifact_name.outputs.build_artifact_name }}
       wheel_artifact_name: ${{ steps.set_wheel_artifact_name.outputs.wheel_artifact_name }}
     container:
@@ -149,11 +152,22 @@ jobs:
             exit 1
           fi
 
+      - name: Set artifact name
+        id: set-artifact-name
+        run: |
+          TOOLCHAIN="${{ inputs.toolchain }}"
+          TOOLCHAIN_CLEANED=$(echo "$TOOLCHAIN" | sed -E 's/^cmake\///; s/-toolchain\.cmake$//')
+          ARTIFACT_NAME="packages-${{ inputs.distro }}-${{ inputs.version }}-${{ inputs.architecture }}-${{ inputs.build-type }}-${TOOLCHAIN_CLEANED}${{ (inputs.tracy && '_profiler') || '' }}"
+
+          echo "name=$ARTIFACT_NAME" >> "$GITHUB_OUTPUT"
+          echo "ARTIFACT_NAME=$ARTIFACT_NAME" >> "$GITHUB_ENV"
+
       - name: ⬇️ Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
           submodules: recursive
+          fetch-depth: 500 # Need enough history for `git describe`
+          fetch-tags: true # Need tags for `git describe`
           path: docker-job # Here be dragons; keep it scoped to our desired volume, yet must be under github.workspace and be sure to clean up at the end
 
       - name: Sanity check
@@ -194,9 +208,9 @@ jobs:
           nice -19 cmake --build build --target install
 
       - name: 📦 Package
-        if: false # Packaging coming later
         run: |
-          nice -19 cmake --build $build_dir --target package
+          nice -n 19 cmake --build build --target package
+          ls -1sh build/*.deb build/*.ddeb
 
       - name: 🐍 Build wheel
         if: ${{ inputs.build-wheel }}
@@ -209,6 +223,16 @@ jobs:
           echo '```' >> $GITHUB_STEP_SUMMARY
           ccache -s >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
+
+      - name: ☁️ Upload packages
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.ARTIFACT_NAME }}
+          path: |
+            /work/build/*.deb
+            /work/build/*.ddeb
+          compression-level: 0
+          if-no-files-found: error
 
       - name: Set wheel artifact name
         id: set_wheel_artifact_name
