--- a/.github/workflows/_test-wheels-impl.yaml
+++ b/.github/workflows/_test-wheels-impl.yaml
@@ -91,8 +91,10 @@ jobs:
         with:
           name: eager-dist-${{ matrix.os }}-any
           path: docker-job # Here be dragons; keep it scoped to our desired volume, yet must be under github.workspace and be sure to clean up at the end
-      - name: Set up end-to-end tests environment
-        run: ./tests/scripts/set_up_end_to_end_tests_env.sh
+      - name: Install Wheel
+        run: |
+          WHEEL_FILENAME=$(ls -1 *.whl)
+          pip3 install $WHEEL_FILENAME
       - name: Activate env and run release tests - silicon
         timeout-minutes: 2
         run: |
