--- a/tt_metal/jit_build/CMakeLists.txt
+++ b/tt_metal/jit_build/CMakeLists.txt
@@ -13,7 +13,7 @@ target_link_libraries(
     PUBLIC
         common
     PRIVATE
-        Metalium::Metal::Common
+        TT::Metalium::Common
         Metalium::Metal::LLRT
         Tracy::TracyClient
         Taskflow::Taskflow
