--- a/tt-train/configs/training_ttnn_gpt2s.yaml
+++ b/tt-train/configs/training_ttnn_gpt2s.yaml
@@ -2,7 +2,7 @@ training_config:
   project_name: "tt_train_nano_gpt"
   seed: 5489
   model_save_interval: 100
-  model_path: "ttnn_gpt2s_16k_1024.msgpack"
+  model_path: "ttnn_gpt2s_16k_1024_2100.msgpack"
   batch_size: 32
   num_epochs: 1
   max_steps: 5000 #2.5B tokens used for training
@@ -29,7 +29,7 @@ training_config:
     experimental:
       use_composite_layernorm: false
 eval_config:
-  repetition_penalty: 1.0
+  repetition_penalty: 2.0
   temperature: 0.7
-  top_k: 50
+  top_k: 100
   top_p: 1.0
