--- a/tt_metal/fabric/CMakeLists.txt
+++ b/tt_metal/fabric/CMakeLists.txt
@@ -1,5 +1,4 @@
 add_library(fabric)
-add_library(TT::Fabric ALIAS fabric)
 
 target_sources(
     fabric
@@ -37,9 +36,9 @@ target_precompile_headers(
 
 target_compile_options(fabric PRIVATE -Wno-int-to-pointer-cast)
 
-set_target_properties(
-    fabric
-    PROPERTIES
-        INSTALL_RPATH
-            "${PROJECT_BINARY_DIR}/lib"
-)
+#set_target_properties(
+#    fabric
+#    PROPERTIES
+#        INSTALL_RPATH
+#            "${PROJECT_BINARY_DIR}/lib"
+#)
