--- a/.github/workflows/run-profiler-regression.yaml
+++ b/.github/workflows/run-profiler-regression.yaml
@@ -68,7 +68,7 @@ jobs:
         PROFILER_ARTIFACTS_DIR: /work/generated/profiler
         PROFILER_OUTPUT_DIR: /work/generated/profiler/reports
         TTNN_CONFIG_OVERRIDES: '{"enable_fast_runtime_mode": false}'
-        TT_METAL_DEVICE_PROFILER: 1
+        NO_USE_VENV_PLZ: 1
       volumes:
         - ${{ github.workspace }}/docker-job:/work # Subdir to workaround https://github.com/actions/runner/issues/691
         - /dev/hugepages-1G:/dev/hugepages-1G
