--- a/.github/workflows/blackhole-post-commit.yaml
+++ b/.github/workflows/blackhole-post-commit.yaml
@@ -63,6 +63,7 @@ jobs:
     with:
       arch: "blackhole"
       runner-label: ${{ inputs.runner-label || 'BH' }}
+      build-artifact-name: ${{ needs.build-artifact-profiler.outputs.build-artifact-name }}
       docker-image: ${{ needs.build-artifact.outputs.ci-build-docker-image }}
   umd-unit-tests:
     secrets: inherit
