--- a/.github/workflows/fast-dispatch-full-regressions-and-models-impl.yaml
+++ b/.github/workflows/fast-dispatch-full-regressions-and-models-impl.yaml
@@ -12,20 +12,20 @@ jobs:
       matrix:
         test-group:
           [
-            {
-              name: "Common models GS",
-              arch: grayskull,
-              runs-on: ["cloud-virtual-machine", "E150", "in-service"],
-              cmd: tests/scripts/single_card/nightly/run_common_models.sh,
-              timeout: 40
-            },
-            {
-              name: "GS ttnn nightly",
-              arch: grayskull,
-              runs-on: ["cloud-virtual-machine", "E150", "in-service"],
-              cmd: tests/scripts/single_card/nightly/run_ttnn.sh,
-              timeout: 40
-            },
+            # {
+            #   name: "Common models GS",
+            #   arch: grayskull,
+            #   runs-on: ["cloud-virtual-machine", "E150", "in-service"],
+            #   cmd: tests/scripts/single_card/nightly/run_common_models.sh,
+            #   timeout: 40
+            # },
+            # {
+            #   name: "GS ttnn nightly",
+            #   arch: grayskull,
+            #   runs-on: ["cloud-virtual-machine", "E150", "in-service"],
+            #   cmd: tests/scripts/single_card/nightly/run_ttnn.sh,
+            #   timeout: 40
+            # },
             {
               name: "WH N150 ttnn nightly",
               arch: wormhole_b0,
@@ -40,13 +40,13 @@ jobs:
               cmd: tests/scripts/single_card/nightly/run_ttnn.sh,
               timeout: 70
             },
-            {
-              name: "GS-only models",
-              arch: grayskull,
-              runs-on: ["cloud-virtual-machine", "E150", "in-service"],
-              cmd: tests/scripts/single_card/nightly/run_gs_only.sh,
-              timeout: 40
-            },
+            # {
+            #   name: "GS-only models",
+            #   arch: grayskull,
+            #   runs-on: ["cloud-virtual-machine", "E150", "in-service"],
+            #   cmd: tests/scripts/single_card/nightly/run_gs_only.sh,
+            #   timeout: 40
+            # },
           ]
     name: FD ${{ matrix.test-group.name }} ${{ matrix.test-group.arch }}
     env:
