--- a/.github/workflows/docs-latest-public.yaml
+++ b/.github/workflows/docs-latest-public.yaml
@@ -2,6 +2,11 @@ name: "[internal] Docs build and deploy to GitHub pages on main impl"
 
 on:
   workflow_call:
+    inputs:
+      version:
+        required: false
+        type: string
+        default: latest
 
 concurrency:
   # Note that people may spam the post-commit pipeline on their branch, and
@@ -20,7 +25,6 @@ jobs:
       matrix:
         arch: [grayskull]
     env:
-      DOCS_VERSION: latest
       ARCH_NAME: ${{ matrix.arch }}
       LOGURU_LEVEL: INFO
       LD_LIBRARY_PATH: ${{ github.workspace }}/build/lib
@@ -57,21 +61,23 @@ jobs:
       - name: Prepare artifact - move output
         run: |
           mkdir gh_pages
-          mv docs/build/html gh_pages/$DOCS_VERSION
+          mv docs/build/html gh_pages/${{ inputs.version }}
       - name: Prepare artifact - create .nojekyll
         run: |
           touch gh_pages/.nojekyll
       - name: Prepare artifact - create root index
         run: |
           touch gh_pages/index.html
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3.0.1
-        with:
-          path: "gh_pages"
       - name: Deploy to GitHub Pages
         if: ${{ github.ref == 'refs/heads/main' }}
+        uses: JamesIves/github-pages-deploy-action@v4
         id: deployment
-        uses: actions/deploy-pages@v4.0.4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          target-folder: ${{ inputs.version }}
+          folder: ./gh_pages/${{ inputs.version }}
+          force: false
       - name: Delete artifact if deployment failed
         # When the deployment API call fails, the artifacts are not cleaned up correctly
         # and the next attempt (!) run will cause an error.
