--- a/.github/workflows/t3000-profiler-tests-impl.yaml
+++ b/.github/workflows/t3000-profiler-tests-impl.yaml
@@ -40,7 +40,9 @@ jobs:
       - uses: ./.github/actions/install-python-deps
       - name: Run profiler regression tests
         timeout-minutes: 30
+        # TODO: remove the pytest from this pipeline https://tenstorrent.atlassian.net/browse/DEVINFRA-2816
         run: |
+          pytest -n auto tests/tt_metal/microbenchmarks/ethernet/test_fabric_edm_bandwidth.py
           ./tests/scripts/run_profiler_regressions.sh
       - uses: ./.github/actions/slack-report
         if: ${{ failure() }}
