--- a/.github/workflows/metal-run-microbenchmarks.yaml
+++ b/.github/workflows/metal-run-microbenchmarks.yaml
@@ -19,6 +19,13 @@ jobs:
           # N300
           {arch: wormhole_b0, runs-on: ["N300", "pipeline-perf", "bare-metal", "in-service"]},
           {arch: wormhole_b0, runs-on: ["N300", "pipeline-perf", "bare-metal", "in-service"], ccl: true},
+          # T3000
+          {
+              name: "T3000 uBenchmark tests",
+              arch: wormhole_b0,
+              runs-on: ["arch-wormhole_b0", "config-t3000", "pipeline-perf", "in-service"],
+              is-t3k: true
+          },
         ]
     env:
       # Use BM for microbenchmarks
@@ -40,6 +47,8 @@ jobs:
           PIPELINE_TYPE="microbenchmarks"
           if [ "${{ matrix.runner-info.ccl }}" == "true" ]; then
             PIPELINE_TYPE="ccl_microbenchmarks"
+          elif [ "${{ matrix.runner-info.is-t3k }}" == "true" ]; then
+            PIPELINE_TYPE="T3K_microbenchmark"
           else
             TT_METAL_SLOW_DISPATCH_MODE=1 ./tests/scripts/run_tunneler_tests.sh --machine-type ${{ matrix.runner-info.runs-on[0] }}
           fi
