Update tests directory to use relocated test_common.hpp

--- a/tests/tt_metal/tt_metal/CMakeLists.txt
+++ b/tests/tt_metal/tt_metal/CMakeLists.txt
@@ -48,6 +48,7 @@ foreach(TEST_SRC ${TT_METAL_TESTS_SRCS})
         PRIVATE
             "$<TARGET_PROPERTY:Metalium::Metal,INCLUDE_DIRECTORIES>"
             ${PROJECT_SOURCE_DIR}/tests
+            ${PROJECT_SOURCE_DIR}/tests/tt_metal/test_utils
             ${CMAKE_CURRENT_SOURCE_DIR}
     )
     set_target_properties(
