--- a/tests/tt_metal/tt_metal/perf_microbenchmark/CMakeLists.txt
+++ b/tests/tt_metal/tt_metal/perf_microbenchmark/CMakeLists.txt
@@ -79,6 +79,7 @@ foreach(arch ${ARCHITECTURES})
                 "$<TARGET_PROPERTY:Metalium::Metal,INCLUDE_DIRECTORIES>"
                 ${PROJECT_SOURCE_DIR}/ttnn/cpp/ttnn/deprecated # this all should go away and be replaced with link to ttnn
                 ${PROJECT_SOURCE_DIR}/tests
+                ${PROJECT_SOURCE_DIR}/tests/tt_metal/test_utils
                 ${CMAKE_CURRENT_SOURCE_DIR}
         )
         set_target_properties(
