--- a/.github/workflows/tgg-demo-tests.yaml
+++ b/.github/workflows/tgg-demo-tests.yaml
@@ -11,6 +11,7 @@ jobs:
     secrets: inherit
     with:
       build-wheel: true
+      version: 22.04
   tgg-demo-tests:
     needs: build-artifact
     strategy:
