#0: Rename nightly L2 tests to something more sane + ping Borys on failure

--- a/.github/workflows/_produce-data.yaml
+++ b/.github/workflows/_produce-data.yaml
@@ -44,6 +44,7 @@ on:
       - "Blackhole post-commit tests"
       - "Custom test dispatch"
       - "PR Gate"
+      - "Nightly tt-metal L2 tests"
     types:
       - completed
 
