--- a/.github/workflows/tt-metal-l2-nightly.yaml
+++ b/.github/workflows/tt-metal-l2-nightly.yaml
@@ -1,4 +1,4 @@
-name: "[internal] tt-metal l2 nightly tests"
+name: "Nightly tt-metal L2 tests"
 
 on:
   workflow_call:
@@ -78,4 +78,4 @@ jobs:
         if: ${{ failure() }}
         with:
           slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
-          owner: U07HTBQPHFG # Bryan Keith
+          owner: U06Q7ESTFEV # Borys Bradel
