#0: Add wheel to post commit wrapper for models since it uses wheel now

--- a/.github/workflows/models-post-commit-wrapper.yaml
+++ b/.github/workflows/models-post-commit-wrapper.yaml
@@ -11,6 +11,8 @@ jobs:
   build-artifact:
     uses: ./.github/workflows/build-artifact.yaml
     secrets: inherit
+    with:
+      build-wheel: true
   models-unit-tests:
     needs: build-artifact
     secrets: inherit
