--- a/.github/workflows/tg-nightly-tests.yaml
+++ b/.github/workflows/tg-nightly-tests.yaml
@@ -13,66 +13,5 @@ jobs:
       build-wheel: true
   tg-nightly-tests:
     needs: build-artifact
-    strategy:
-      fail-fast: false
-      matrix:
-        test-group: [
-          { name: "placeholder", arch: wormhole_b0, cmd: "echo 'Placeholder'", timeout: 90, owner_id: U03FJB5TM5Y}, # Colman Glagovich
-        ]
-    name: ${{ matrix.test-group.name }}
-    runs-on: ["arch-wormhole_b0", "config-tg", "in-service", "pipeline-functional"]
-    container:
-      image: ${{ needs.build-artifact.outputs.ci-build-docker-image }}
-      env:
-        TT_METAL_HOME: /work
-        PYTHONPATH: /work
-        LD_LIBRARY_PATH: /work/build/lib
-        LOGURU_LEVEL: INFO
-        ARCH_NAME: ${{ matrix.test-group.arch }}
-      volumes:
-        - ${{ github.workspace }}/docker-job:/work # Subdir to workaround https://github.com/actions/runner/issues/691
-        - /dev/hugepages-1G:/dev/hugepages-1G
-        - /mnt/MLPerf:/mnt/MLPerf
-      options: "--device /dev/tenstorrent"
-    defaults:
-      run:
-        shell: bash
-        working-directory: /work # https://github.com/actions/runner/issues/878
-    steps:
-      - name: ⬇️ Checkout
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-          path: docker-job # Here be dragons; keep it scoped to our desired volume, yet must be under github.workspace and be sure to clean up at the end
-      - uses: actions/download-artifact@v4
-        with:
-          name: ${{ needs.build-artifact.outputs.build-artifact-name }}
-          path: /work
-      - name: Extract files
-        run: tar -xvf ttm_any.tar
-      - name: ⬇️ Download Wheel
-        uses: actions/download-artifact@v4
-        with:
-          name: ${{ needs.build-artifact.outputs.wheel-artifact-name }}
-          path: /work
-      - name: Install Wheel
-        run: |
-          WHEEL_FILENAME=$(ls -1 *.whl)
-          pip3 install $WHEEL_FILENAME
-      - name: Run demo regression tests
-        shell: bash {0}
-        timeout-minutes: ${{ matrix.test-group.timeout }}
-        run: |
-          source ${{ github.workspace }}/tests/scripts/tg/run_tg_nightly_tests.sh
-          ${{ matrix.test-group.cmd }}
-      - uses: ./.github/actions/slack-report
-        if: ${{ failure() }}
-        with:
-          slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
-          owner: ${{ matrix.test-group.owner_id }}
-      - name: Cleanup
-        if: always()
-        run: |
-          # We are forced to checkout the repo into a subdir of the host's workdir; this pollutes the host
-          # with root-owned files.  Be sure to clean up after ourselves in case we're on a non-ephemeral runner.
-          rm -rf /__w/tt-metal/tt-metal/docker-job
+    uses: ./.github/workflows/tg-nightly-tests-impl.yaml
+    secrets: inherit
